# llm-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: run_gsm8k_benchmark.py
src/llm-benchmarks/data/: gsm8k.py
src/llm_benchmarks/: __main__.py  benchmark_runner.py  gsm8k_leaderboard.py  main.py
src/llm_benchmarks/cache/: cache.py
src/llm_benchmarks/data/: __init__.py  gsm8k.py
src/llm_benchmarks/model/: __init__.py  model.py
src/llm_benchmarks/solvers/: __init__.py  gsm8k_solver.py
src/llm_benchmarks/utils/: args.py  logging.py  prompt_utils.py
src/llm_benchmarks/utils/prompts/: __init__.py  chain_of_thought.txt  default.txt  llama3_2_weakness_addressing.txt  rigorous.txt  simple.txt
tests/: test_args.py  test_cache.py  test_dataset.py  test_gsm8k_solver.py  test_main_execution.py  test_model.py  test_prompt_utils.py  test_prompts.py
