[project]
name = "llm-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ipython>=8.20.0",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.11.13",
]

[project.scripts]
gsm8k-benchmark = "llm_benchmarks.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests (slow, requires network)",
]
